--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -5,7 +5,7 @@ on:
         branches:
             - master
     schedule:
-        - cron: '5,10 16 * * *'
+        - cron: '5 */4 * * *'
 jobs:
     build:
         runs-on: ubuntu-latest
